Search bar now searching. Not showing results

--- a/home.html
+++ b/home.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="index.html">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   <title>Hyrule Compendium</title>
+
+  <link rel="website icon" type="png" href="./assets/Hylian-sheild.png">
 </head>
 
 <body>
