--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   <title>Hyrule Compendium</title>
+
+  <link rel="website icon" type="png" href="./assets/Hylian-sheild.png">
 </head>
 
 <body>
@@ -41,7 +43,7 @@
   </nav>
   <section id="compendium">
     <div class="input__wrapper compendium__search">
-      <input type="text" placeholder="Search by Name, Category or Reigon">
+      <input type="text" id="search" placeholder="Search by Name, Category or Reigon">
       <button class="search__button not-loading loading">
         <img src="./assets/magnifying-glass-solid.svg" class="magnifying-glass" alt="">
       </button>
@@ -56,8 +58,8 @@
                 <!--COMMONS-->
                 <h3 class="object__name">Data Name</h3>
                 <img class="object__img" src="">
-                <p class="object__headers"><b>Category:</b>Placeholder</p>
-                <p class="object__headers"><b>Common Locations:</b> Hyrule Ridge</p>
+                <p class="object__headers"><b>Category:</b> Placeholder</p>
+                <p class="object__headers"><b>Common Locations:</b> Placeholder</p>
                 <p class="object__headers"><b>Descrption:</b> Placeholder</p>
 
                 <p class="object__headers"><b>Cooking Effect:</b> Placeholder</p>
