--- a/index.html
+++ b/index.html
@@ -51,25 +51,23 @@
     <div class="container">
       <div class="row__compendium">
         <div class="object-list">
-          <div class="object">
-            <div class="object-card">
-              <div class="object-card__container">
+          <div class="object-card">
+            <div class="object-card__container">
 
-                <!--COMMONS-->
-                <h3 class="object__name">Data Name</h3>
-                <img class="object__img" src="">
-                <p class="object__headers"><b>Category:</b> Placeholder</p>
-                <p class="object__headers"><b>Common Locations:</b> Placeholder</p>
-                <p class="object__headers"><b>Descrption:</b> Placeholder</p>
+              <!--COMMONS-->
+              <h3 class="object__name">Data Name</h3>
+              <img class="object__img" src="">
+              <p class="object__headers"><b>Category:</b> </p>
+              <p class="object__headers"><b>Common Locations:</b> </p>
+              <p class="object__headers"><b>Descrption:</b> </p>
 
-                <p class="object__headers"><b>Cooking Effect:</b> Placeholder</p>
-                <p class="object__headers"><b>Hearts_recovered:</b> Placeholder</p>
+              <p class="object__headers"><b>Cooking Effect:</b> </p>
+              <p class="object__headers"><b>Hearts Recovered:</b> </p>
 
-                <p class="object__headers"><b>Drops:</b> Placeholder</p>
+              <p class="object__headers"><b>Drops:</b> </p>
 
-                <p class="object__headers"><b>Attack:</b> Placeholder</p>
-                <p class="object__headers"><b>Defense:</b> Placeholder</p>
-              </div>
+              <p class="object__headers"><b>Attack:</b> </p>
+              <p class="object__headers"><b>Defense:</b> </p>
             </div>
           </div>
         </div>
